Fix Bug 1692539: Implementing dark background on hover for all panels (#1872)
Also: Delete extra padding in the Locales tab

--- a/frontend/src/core/term/components/Term.css
+++ b/frontend/src/core/term/components/Term.css
@@ -9,7 +9,7 @@
 }
 
 .terms-list .term:not(.cannot-copy):hover {
-    background: #4d5967;
+    background: #333941;
     border-color: #5e6475;
 }
 
